--- a/index.html
+++ b/index.html
@@ -5,11 +5,177 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arrizkyhp</title>
+    <title>Arrizky Hasya Pratama | Frontend Web Developer</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-    <h1>Under Construction!!!</h1>
+    <nav>
+
+
+    </nav>
+    <main>
+        <header>
+            <div class="profile">
+                <div class="profile__card">
+                    <img src="assets/images/ra.jpg" alt="profile" class="profile__card__pict">
+                    <div class="profile__card__text">
+                        <h1>Arrizky Hasya Pratama</h1>
+                        <h2>Frontend Web Developer</h2>
+                        <div class="social">
+                            <a href="https://github.com/arrizkyhp/" class="social__card" target="__blank">
+                                <img src="assets/images/github-icon.svg" alt="github" class="social__card__icon">
+                                <div class="social__card__text">
+                                    <h1>Github</h1>
+                                    <p>/arrizkyhp</p>
+                                </div>
+                            </a>
+                            <a href="https://www.linkedin.com/in/arrizkyhp/" class="social__card" target="__blank">
+                                <img src="assets/images/linkedin-icon.svg" alt="linkedin" class="social__card__icon">
+                                <div class="social__card__text">
+                                    <h1>LinkedIn</h1>
+                                    <p>/in/arrizkyhp</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <p class="description">
+                    Passionate in programming especially in Frontend Web Development, always strive to provide the best
+                    possible user experience in the applications I build, regardless of browser or screen size, and I’m
+                    eager to learn something new.
+                </p>
+            </div>
+            <div class="information">
+                <p>Barulaksana 49 03/14 <br>
+                    Jayagiri Lembang <br>
+                    Bandung Barat <br> 40391</p>
+
+                <div class="information__link">
+                    <a class="telpon" href="https://wa.me/6285161867116" target="_blank">
+                        +628 516 186 7116
+                    </a>
+                    <a href="mailto:arrizkyhp@gmail.com" class="email">arrizkyhp@gmail.com</a>
+                </div>
+                <a href="assets/CV.pdf" download class="pdf-download">
+                    <img src="assets/images/download-icon.svg" alt="generate pdf" class="icon-pdf" title="generate pdf">
+                </a>
+
+                <a href="assets/CV.pdf" class="pdf-download-mobile" download>Download CV</a>
+            </div>
+        </header>
+        <section>
+            <div class="content">
+                <div class="content-group">
+                    <h1 class="content__title">
+                        EXPERIENCE
+                    </h1>
+                    <div class="experience first">
+                        <h2 class="experience__company-name">
+                            Project, <span>Web Catering JembarSariRasa</span>
+                        </h2>
+                        <h3>Juli 2019 - September 2019</h3>
+                        <p>Build a web-based application using laravel which is used by the owner of jembar sari rasa in
+                            managing his catering business, starting from transactions, equipment management & equipment
+                            rental</p>
+                    </div>
+                    <div class="experience second">
+                        <h2 class="experience__company-name">
+                            Someah Kreatif Nusantara, <span>Internship</span>
+                        </h2>
+                        <h3>August 2018 - September 2018</h3>
+                        <p>I help build an android application that is used for credit merchant , to facilitate their
+                            transactions. Im working as Android Developers</p>
+                    </div>
+                </div>
+
+                <div class="content-group">
+                    <h1 class="content__title">
+                        CERTIFICATES
+                    </h1>
+                    <div class="certificate">
+                        <h2 class="certificate__title">
+                            Freecodecamp <span>- Responsive Web Design</span>
+                        </h2>
+                        <h3>28 June 2021</h3>
+                    </div>
+                    <div class="certificate">
+                        <h2 class="certificate__title">
+                            Freecodecamp <span>- JavaScript Algorithms and Data Structures</span>
+                        </h2>
+                        <h3>9 August 2021</h3>
+                    </div>
+                    <div class="certificate">
+                        <h2 class="certificate__title">
+                            Dicoding <span>- Belajar Dasar Git dengan Github</span>
+                        </h2>
+                        <h3>30 July 2021</h3>
+                    </div>
+                    <div class="certificate">
+                        <h2 class="certificate__title">
+                            BuildWithAngga <span>- Full-Stack JavaScript Developer</span>
+                        </h2>
+                        <h3>14 September 2021</h3>
+                    </div>
+                </div>
+
+                <div class="content-group">
+                    <h1 class="content__title">
+                        CURRENT PROJECT
+                    </h1>
+                    <div class="current-project">
+                        <h2 class="current-project__title">
+                            Frontendmentor
+                        </h2>
+                        <p>I’m currently doing challenge from frontendmentor.io, where they give me design and brief,
+                            and then i turn it into code, currently i completed 14 challenges.</p>
+                    </div>
+                </div>
+
+            </div>
+            <div class="side">
+                <div class="side-group">
+                    <h1 class="side__title">
+                        TECHNICAL SKILLS
+                    </h1>
+                    <p>
+                        HTML, CSS, Sass, JavaScript, ES6, ReactJS, Bootstrap, GulpJS, React Testing Library, Jestjs,
+                        Enzyme, BEM
+                    </p>
+                </div>
+                <div class="side-group">
+                    <h1 class="side__title">
+                        SOFTWARE SKILLS
+                    </h1>
+                    <p>
+                        VSCode, Figma, Adobe XD, Postman, Adobe Photoshop
+                    </p>
+                </div>
+                <div class="side-group">
+                    <h1 class="side__title">
+                        EDUCATION
+                    </h1>
+                    <h2 class="major">
+                        Banchelor’s degree in Information Systems
+                    </h2>
+                    <h3 class="university">
+                        Universitas Komputer Indonesia
+                    </h3>
+                    <p class="education-year">2015 - 2019</p>
+                </div>
+                <div class="side-group">
+                    <h1 class="side__title">
+                        INTEREST
+                    </h1>
+                    <div class="interests">
+                        <p>Game</p>
+                        <p>Painting</p>
+                        <p>Music</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
