CV V.2 | add content at certificate

--- a/index.html
+++ b/index.html
@@ -98,24 +98,35 @@
                             Freecodecamp <span>- Responsive Web Design</span>
                         </h2>
                         <h3>28 June 2021</h3>
+                        <p>in this course held by freecodecamp I learned the basics of html and css, how to make a
+                            responsive website that can be opened by multiple screens and devices, at the end of the
+                            course I was given several projects to create a responsive website</p>
                     </div>
                     <div class="certificate">
                         <h2 class="certificate__title">
                             Freecodecamp <span>- JavaScript Algorithms and Data Structures</span>
                         </h2>
                         <h3>9 August 2021</h3>
+                        <p>This course which is also held by freecodecamp, I learned the fundamentals of javascript and
+                            how it works, besides that I also learned algorithms and data structures. At the end of the
+                            course, several projects are also given to complete</p>
                     </div>
                     <div class="certificate">
                         <h2 class="certificate__title">
                             Dicoding <span>- Belajar Dasar Git dengan Github</span>
                         </h2>
                         <h3>30 July 2021</h3>
+                        <p>I was taught how git works starting from the basics of git, how to do push, pull, fork, merge
+                            which I find very useful when I do programming</p>
                     </div>
                     <div class="certificate">
                         <h2 class="certificate__title">
                             BuildWithAngga <span>- Full-Stack JavaScript Developer</span>
                         </h2>
                         <h3>14 September 2021</h3>
+                        <p>I learned how fullstack applications work completely starting with creating designs using
+                            figma, creating frontend and then backend, using MERN(mongoDB, ExpressJS, ReactJS, &
+                            NodeJS).</p>
                     </div>
                 </div>
 
