--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 </p>
             </div>
             <div class="information">
-                <p>Barulaksana 49 03/14 <br>
-                    Jayagiri Lembang <br>
+                <p>Barulaksana, Jayagiri <br>
+                    Lembang <br>
                     Bandung Barat <br> 40391</p>
 
                 <div class="information__link">
